log

Thu 17 Aug 2023 10:44:58 PM UTC: 
 exercises.c | 153 ++++++++++++++++++++++++++++++++++++++++++++++++++++++++----
 1 file changed, 144 insertions(+), 9 deletions(-)
In file included from test.c:1:
exercises.c: In function ‘filterEvenNumbers’:
exercises.c:69:10: error: function returns address of local variable [-Werror=return-local-addr]
   69 |   return listaPar;
      |          ^~~~~~~~
exercises.c: In function ‘checkSorted’:
exercises.c:149:1: error: control reaches end of non-void function [-Werror=return-type]
  149 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
6c41012
Thu 17 Aug 2023 10:47:39 PM UTC: 
 exercises.c | 5 +----
 1 file changed, 1 insertion(+), 4 deletions(-)
In file included from test.c:1:
exercises.c: In function ‘checkSorted’:
exercises.c:146:1: error: control reaches end of non-void function [-Werror=return-type]
  146 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
31a5f54
Thu 17 Aug 2023 10:48:22 PM UTC: 
 exercises.c | 6 ++++--
 1 file changed, 4 insertions(+), 2 deletions(-)
In file included from test.c:1:
exercises.c: In function ‘checkSorted’:
exercises.c:148:1: error: control reaches end of non-void function [-Werror=return-type]
  148 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
07e0a50
Thu 17 Aug 2023 10:48:54 PM UTC: 
 exercises.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  0|6
total_score: 10/70
1685df6
Thu 17 Aug 2023 10:51:37 PM UTC: 
 exercises.c | 8 ++++----
 1 file changed, 4 insertions(+), 4 deletions(-)
 tests:  0|4
total_score: 30/70
cca063d
Thu 17 Aug 2023 10:58:30 PM UTC: 
 exercises.c | 15 ++++++++-------
 1 file changed, 8 insertions(+), 7 deletions(-)
 tests:  0|3
total_score: 40/70
8379e58
